--- a/i18n/translations/en.json
+++ b/i18n/translations/en.json
@@ -92,6 +92,7 @@
     "advancedSearch": "Advanced search",
     "logOut": "Log out",
     "showMore": "Show more",
+    "offer": "Offer",
     "showLess": "Show less",
     "forgotPassword": "Forgot password",
     "addListing": "Add listing"
