--- a/i18n/translations/en.json
+++ b/i18n/translations/en.json
@@ -7,7 +7,11 @@
     "oops": "🐞Oops! Something happened"
   },
   "snackbar": {
-    "welcome": "👋 Welcome"
+    "welcome": "👋 Welcome",
+    "link_copied": "Link copied!"
+  },
+  "titles": {
+    "vehicle_of_the_day": "Vehicle of the day"
   },
   "labels": {
     "featured": "Featured",
@@ -59,12 +63,19 @@
     "gearbox": "Gearbox",
     "km": "Km",
     "k": "K",
+    "color": "Color",
+    "speedTo100": "Speed (1-100)",
+    "mileage": "Mileage",
+    "labelConsCity": "Cons.(city)",
     "kw": "kW",
+    "location": "Location",
     "l": "L",
     "priceMin": "Price (min)",
     "priceMax": "Price (max)",
     "yearMin": "Year (min)",
     "yearMax": "Year (max)",
+    "year": "Year",
+    "type": "Type",
     "make": "Make"
   },
   "placeholder": {
