banner changes, vod minor changes

--- a/i18n/translations/en.json
+++ b/i18n/translations/en.json
@@ -50,6 +50,21 @@
     "ethanol": "Ethanol",
     "other": "Other"
   },
+  "colors": {
+    "black": "Black",
+    "white": "White",
+    "silver": "Silver",
+    "gold": "Gold",
+    "blue": "Blue",
+    "red": "Red",
+    "purple": "Purple",
+    "yellow": "Yellow",
+    "pink": "Pink",
+    "green": "Green",
+    "orange": "Orange",
+    "gray": "Gray",
+    "brown": "Brown"
+  },
   "label": {
     "or": "OR",
     "email": "Email",
@@ -62,6 +77,7 @@
     "remember": "Remember",
     "gearbox": "Gearbox",
     "km": "Km",
+    "litersIn100Km": "L/100 Km",
     "k": "K",
     "color": "Color",
     "speedTo100": "Speed (1-100)",
@@ -70,6 +86,7 @@
     "kw": "kW",
     "location": "Location",
     "l": "L",
+    "seconds": "Seconds",
     "priceMin": "Price (min)",
     "priceMax": "Price (max)",
     "yearMin": "Year (min)",
@@ -97,6 +114,8 @@
     "signIn": "Sign in",
     "signUp": "Sign up",
     "reset": "Reset",
+    "call": "Call",
+    "mail": "Mail",
     "search": "Search",
     "share": "Share",
     "contact": "Contact",
