--- a/i18n/translations/en.json
+++ b/i18n/translations/en.json
@@ -12,6 +12,9 @@
   },
   "titles": {
     "vehicle_of_the_day": "Vehicle of the day",
+    "featuredVehicles": "Featured vehicles",
+    "recommendedVehicles": "Recommended vehicles",
+    "latestVehicles": "Latest vehicles",
     "allVehicles": "All vehicles"
   },
   "labels": {
@@ -69,6 +72,7 @@
   "label": {
     "or": "OR",
     "email": "Email",
+    "baseDetails": "Base details",
     "password": "Password",
     "firstName": "First name",
     "lastName": "Last name",
