--- a/i18n/translations/en.json
+++ b/i18n/translations/en.json
@@ -98,6 +98,56 @@
     "yearMax": "Year (max)",
     "year": "Year",
     "type": "Type",
+    "safety": "Safety",
+    "alarm": "Alarm",
+    "centralLocking": "Central locking",
+    "disabilityEquipment": "Disability equipment",
+    "immobilizer": "Immobilizer",
+    "parkingAid": "Parking aid",
+    "parkingCamera": "Parking camera",
+    "abs": "ABS",
+    "crashed": "Crashed",
+    "comfort": "Comfort",
+    "interiorColor": "Interior color",
+    "bluetooth": "Bluetooth",
+    "cdPlayer": "CD player",
+    "climateControl": "Climate Control",
+    "cruiseControl": "Cruise Control",
+    "ElectricAdjSeats": "Electric Adj Seats",
+    "electricWindows": "Electric Windows",
+    "handsFree": "Hands free",
+    "memorySeats": "Memory Seats",
+    "memoryWheel": "Memory Wheel",
+    "mirrorHeating": "Mirror Heating",
+    "mirrorLink": "Mirror Link",
+    "navSystem": "Nav System",
+    "panoramaRoof": "Panorama Roof",
+    "rainSensor": "Rain Sensor",
+    "seatHeating": "Seat Heating",
+    "selfDriving": "Self Driving",
+    "startStop": "Start-stop",
+    "sunRoof": "Sun Roof",
+    "seatType": "Seat type",
+    "emissionStandard": "Emission standard",
+    "fuelTank": "Fuel tank",
+    "height": "Height",
+    "weight": "Weight",
+    "tireSize": "Tire size",
+    "rightHandDrive": "Right hand-drive",
+    "capacity": "Capacity",
+    "vin": "VIN",
+    "regNumber": "Reg nr",
+    "warrantyBook": "Warranty book",
+    "consumptionCombined": "Consum. (comb)",
+    "consumptionHighway": "Consum. (highw)",
+    "consumptionUrban": "Consum. (urbn)",
+    "lights": "Lights",
+    "exterior": "Exterior",
+    "technical": "Technical",
+    "towbar": "Towbar",
+    "doors": "Doors",
+    "metallicColor": "Metallic color",
+    "other": "Other",
     "make": "Make"
   },
   "base": {
