add offer view for vehicle card, fix crash

--- a/i18n/translations/en.json
+++ b/i18n/translations/en.json
@@ -198,6 +198,8 @@
     "advancedSearch": "Advanced search",
     "logOut": "Log out",
     "showMore": "Show more",
+    "cancel": "Cancel",
+    "close": "Close",
     "offer": "Offer",
     "showLess": "Show less",
     "forgotPassword": "Forgot password",
