add more base vehicle details

--- a/i18n/translations/en.json
+++ b/i18n/translations/en.json
@@ -20,6 +20,8 @@
     "createListing": "Create listing",
     "latestVehicles": "Latest vehicles",
     "generalDetails": "General details",
+    "consumptionDetails": "Consumption details",
+    "vehicleDetails": "Vehicle details",
     "allVehicles": "All vehicles"
   },
   "labels": {
@@ -82,7 +84,10 @@
     "firstName": "First name",
     "username": "Username",
     "lastName": "Last name",
+    "power": "Power (kW)",
+    "capacity": "Capacity (L)",
     "model": "Model",
+    "month": "Month",
     "fuel": "Fuel",
     "bodyType": "Body type",
     "remember": "Remember",
@@ -125,7 +130,7 @@
     "cruiseControl": "Cruise Control",
     "electricAdjSeats": "Electric Adj Seats",
     "electricWindows": "Electric Windows",
-    "fuelTankCapacity": "Tank capacity",
+    "fuelTankCapacity": "Tank capacity (L)",
     "handsFree": "Hands free",
     "memorySeats": "Memory Seats",
     "memoryWheel": "Memory Wheel",
@@ -145,13 +150,12 @@
     "weight": "Weight",
     "tireSize": "Tire size",
     "rightHandDrive": "Right hand-drive",
-    "capacity": "Capacity",
     "vin": "VIN",
     "regNumber": "Reg nr",
     "warrantyBook": "Warranty book",
-    "consumptionCombined": "Consum. (comb)",
-    "consumptionHighway": "Consum. (highw)",
-    "consumptionUrban": "Consum. (urbn)",
+    "consumptionCombined": "Comb. Consum. (L/100km)",
+    "consumptionHighway": "Highw. Consum. (L/100km)",
+    "consumptionUrban": "Urban Consum. (L/100km)",
     "lights": "Lights",
     "exterior": "Exterior",
     "technical": "Technical",
@@ -159,7 +163,19 @@
     "doors": "Doors",
     "metallicColor": "Metallic color",
     "other": "Other",
-    "make": "Make"
+    "make": "Make",
+    "january": "January",
+    "february": "February",
+    "march": "March",
+    "april": "April",
+    "may": "May",
+    "june": "June",
+    "july": "July",
+    "august": "August",
+    "september": "September",
+    "october": "October",
+    "november": "November",
+    "december": "December"
   },
   "base": {
     "yes": "Yes",
