vehicle creation form

--- a/i18n/translations/en.json
+++ b/i18n/translations/en.json
@@ -21,13 +21,9 @@
     "latestVehicles": "Latest vehicles",
     "generalDetails": "General details",
     "consumptionDetails": "Consumption details",
+    "listingDetails": "Listing details",
     "vehicleDetails": "Vehicle details",
     "allVehicles": "All vehicles"
-  },
-  "labels": {
-    "featured": "Featured",
-    "recommended": "Recommended",
-    "urgent": "Urgent"
   },
   "navigation": {
     "myProfile": "My profile",
@@ -80,7 +76,11 @@
     "or": "OR",
     "email": "Email",
     "baseDetails": "Base details",
+    "description": "Description",
     "password": "Password",
+    "featured": "Featured",
+    "recommended": "Recommended",
+    "urgent": "Urgent",
     "firstName": "First name",
     "username": "Username",
     "lastName": "Last name",
@@ -107,6 +107,7 @@
     "location": "Location",
     "l": "L",
     "seconds": "Seconds",
+    "price": "Price",
     "priceMin": "Price (min)",
     "priceMax": "Price (max)",
     "yearMin": "Year (min)",
@@ -153,9 +154,9 @@
     "vin": "VIN",
     "regNumber": "Reg nr",
     "warrantyBook": "Warranty book",
-    "consumptionCombined": "Comb. Consum. (L/100km)",
-    "consumptionHighway": "Highw. Consum. (L/100km)",
-    "consumptionUrban": "Urban Consum. (L/100km)",
+    "consumptionCombined": "Combined (L/100km)",
+    "consumptionHighway": "Highw. (L/100km)",
+    "consumptionUrban": "Urban (L/100km)",
     "lights": "Lights",
     "exterior": "Exterior",
     "technical": "Technical",
@@ -209,6 +210,7 @@
     "send": "Send",
     "mail": "Mail",
     "back": "Back",
+    "create": "Create",
     "message": "Message",
     "search": "Search",
     "share": "Share",
