add basic favorites form

--- a/i18n/translations/en.json
+++ b/i18n/translations/en.json
@@ -20,6 +20,7 @@
     "featuredVehicles": "Featured vehicles",
     "recommendedVehicles": "Recommended vehicles",
     "createListing": "Create listing",
+    "favorites": "Favorites",
     "latestVehicles": "Latest vehicles",
     "generalDetails": "General details",
     "consumptionDetails": "Consumption details",
@@ -83,6 +84,7 @@
     "featured": "Featured",
     "recommended": "Recommended",
     "urgent": "Urgent",
+    "phone": "Phone",
     "firstName": "First name",
     "username": "Username",
     "lastName": "Last name",
