add search page

--- a/i18n/translations/en.json
+++ b/i18n/translations/en.json
@@ -24,6 +24,7 @@
     "favorites": "Favorites",
     "latestVehicles": "Latest vehicles",
     "generalDetails": "General details",
+    "foundVehicles": "Found vehicles",
     "consumptionDetails": "Consumption details",
     "soldVehicles": "Sold vehicles",
     "thatsAll": "That's all",
