--- a/i18n/translations/ru.json
+++ b/i18n/translations/ru.json
@@ -1,24 +1,63 @@
 {
   "errors": {
-    "blank": "😡 Не может быть пустым",
-    "invalid_credentials": "🔑 Неверный логин",
-    "invalid_email": "📧 Неверный формат",
-    "weak_password": "🤖 Слабый пароль",
-    "oops": "🐞Ой! Что-то случилось"
+    "blank": "😡 не может быть пустым",
+    "invalid_credentials": "🔑 Недействительные учетные данные",
+    "invalid_email": "📧 Формат электронной почты Invalid",
+    "required_field": "😡 поле",
+    "emailExists": "📧 электронная почта уже существует",
+    "invalidVehiclePower": "🔧 недействительным (кВт)",
+    "invalidVehicleCapacity": "🔧 Инвалидная емкость",
+    "nothingFound": "🔧 ничего не найдено",
+    "weakPassword": "🤖 Слабый пароль",
+    "invalidMileage": "🔧 Недействительный пробег",
+    "oops": "🐞 К сожалению! Что-то случилось",
+    "invalidUsername": "😡 Инвалид имя пользователя"
   },
   "snackbar": {
-    "welcome": "👋 Добро пожаловать"
+    "welcome": "👋 Добро пожаловать",
+    "deleteSuccessful": "🗑️ Удалить успешно!",
+    "listingCreated": "🙌 листинг",
+    "link_copied": "Ссылка скопирована!"
   },
-  "button": {
-    "signIn": "Войти",
-    "logOut": "Выйти",
-    "search": "Поиск",
-    "addListing": "Продать"
+  "titles": {
+    "vehicle_of_the_day": "Транспортное средство дня",
+    "featuredVehicles": "Рекомендуемые транспортные средства",
+    "recommendedVehicles": "Рекомендуемые транспортные средства",
+    "createListing": "Создание листинга",
+    "favorites": "Избранное",
+    "latestVehicles": "Последние транспортные средства",
+    "generalDetails": "Общие сведения",
+    "foundVehicles": "Найденные транспортные средства",
+    "consumptionDetails": "Детали потребления",
+    "soldVehicles": "Проданные автомобили",
+    "thatsAll": "Это всё",
+    "availableVehicles": "Доступные транспортные средства",
+    "listingDetails": "Детали листинга",
+    "vehicleDetails": "Детали транспортного средства",
+    "allVehicles": "Все транспортные средства"
   },
-  "moto": {
-    "buyingAndSelling": "Продажа и покупка",
-    "cars": "авто",
-    "made": "сделана",
-    "easy": "простой"
+  "navigation": {
+    "myProfile": "Мой профиль",
+    "myListings": "Мои объявление",
+    "myFavorites": "Мои любимые",
+    "legalAndFaq": "Легальное"
+  },
+  "vehicle": {
+    "sedan": "седан",
+    "vehicle": "транспортное средство",
+    "hatchback": "Хэтчбек",
+    "touring": "гастрольный",
+    "minivan": "Минивэн",
+    "coupe": "чашка",
+    "cabriolet": "обратимый",
+    "pickup": "пикап",
+    "limousine": "седан",
+    "truck": "грузовик",
+    "motorbike": "мотоцикл",
+    "trailer": "прицеп",
+    "semiAutomatic": "Полуавтоматический",
+    "automatic": "Автоматически",
+    "manual": "Вручную",
+    "petrol": "бензин"
   }
 }
