--- a/i18n/translations/en.json
+++ b/i18n/translations/en.json
@@ -28,6 +28,7 @@
     "latestVehicles": "Latest vehicles",
     "generalDetails": "General details",
     "foundVehicles": "Found vehicles",
+    "searchForChatTopic": "Search for chat topic",
     "consumptionDetails": "Consumption details",
     "soldVehicles": "Sold vehicles",
     "thatsAll": "That's all",
