--- a/i18n/translations/en.json
+++ b/i18n/translations/en.json
@@ -228,6 +228,7 @@
     "send": "Send",
     "mail": "Mail",
     "back": "Back",
+    "loadMore": "Load more",
     "create": "Create",
     "message": "Message",
     "search": "Search",
