--- a/i18n/translations/ru.json
+++ b/i18n/translations/ru.json
@@ -1,63 +1,261 @@
 {
   "errors": {
-    "blank": "😡 не может быть пустым",
-    "invalid_credentials": "🔑 Недействительные учетные данные",
-    "invalid_email": "📧 Формат электронной почты Invalid",
-    "required_field": "😡 поле",
-    "emailExists": "📧 электронная почта уже существует",
-    "invalidVehiclePower": "🔧 недействительным (кВт)",
-    "invalidVehicleCapacity": "🔧 Инвалидная емкость",
-    "nothingFound": "🔧 ничего не найдено",
-    "weakPassword": "🤖 Слабый пароль",
+    "blank": "😡 Не может быть пустым",
+    "invalid_credentials": "🔑 Неверные учетные данные",
+    "invalid_email": "📧 Неверный формат электронной почты",
+    "required_field": "😡 Поле обязательно для заполнения",
+    "emailExists": "📧 Электронная почта уже существует",
+    "invalidVehiclePower": "🔧 Недопустимая мощность (кВт)",
+    "invalidVehicleCapacity": "🔧 Недопустимая мощность",
+    "nothingFound": "🔧 Ничего не найдено",
+    "weakPassword": " 🤖 Слабый пароль",
     "invalidMileage": "🔧 Недействительный пробег",
-    "oops": "🐞 К сожалению! Что-то случилось",
-    "invalidUsername": "😡 Инвалид имя пользователя"
+    "oops": "🔑 Неверные учетные данные0",
+    "invalidUsername": "🔑 Неверные учетные данные1"
   },
   "snackbar": {
     "welcome": "👋 Добро пожаловать",
-    "deleteSuccessful": "🗑️ Удалить успешно!",
-    "listingCreated": "🙌 листинг",
+    "deleteSuccessful": "🗑️ Удаление выполнено!",
+    "listingCreated": "🙌 Объявление создано",
     "link_copied": "Ссылка скопирована!"
   },
   "titles": {
-    "vehicle_of_the_day": "Транспортное средство дня",
-    "featuredVehicles": "Рекомендуемые транспортные средства",
-    "recommendedVehicles": "Рекомендуемые транспортные средства",
-    "createListing": "Создание листинга",
+    "vehicle_of_the_day": "Автомобиль дня",
+    "featuredVehicles": "Рекомендуемые автомобили",
+    "registrationDisclaimer": "🤞 Мы не передаем вашу личную информацию третьим лицам.",
+    "recommendedVehicles": "Рекомендуемые автомобили",
+    "createListing": "Создать список",
     "favorites": "Избранное",
-    "latestVehicles": "Последние транспортные средства",
+    "latestVehicles": "Последние автомобили",
     "generalDetails": "Общие сведения",
-    "foundVehicles": "Найденные транспортные средства",
-    "consumptionDetails": "Детали потребления",
-    "soldVehicles": "Проданные автомобили",
-    "thatsAll": "Это всё",
-    "availableVehicles": "Доступные транспортные средства",
-    "listingDetails": "Детали листинга",
-    "vehicleDetails": "Детали транспортного средства",
-    "allVehicles": "Все транспортные средства"
+    "foundVehicles": "Найденные автомобили",
+    "searchForChatTopic": " Поиск темы чата",
+    "consumptionDetails": "Рекомендуемые автомобили0",
+    "soldVehicles": "Рекомендуемые автомобили1",
+    "thatsAll": "Рекомендуемые автомобили2",
+    "availableVehicles": "Рекомендуемые автомобили3",
+    "listingDetails": "Рекомендуемые автомобили4",
+    "vehicleDetails": "Рекомендуемые автомобили5",
+    "allVehicles": "Рекомендуемые автомобили6"
   },
   "navigation": {
     "myProfile": "Мой профиль",
-    "myListings": "Мои объявление",
-    "myFavorites": "Мои любимые",
-    "legalAndFaq": "Легальное"
+    "myListings": "Мои объявления",
+    "myFavorites": "Мои избранные",
+    "legalAndFaq": "Юридические вопросы и часто задаваемые вопросы"
   },
   "vehicle": {
-    "sedan": "седан",
-    "vehicle": "транспортное средство",
+    "sedan": "Седан",
+    "vehicle": "Автомобиль",
     "hatchback": "Хэтчбек",
-    "touring": "гастрольный",
+    "touring": "Универсал",
     "minivan": "Минивэн",
-    "coupe": "чашка",
-    "cabriolet": "обратимый",
-    "pickup": "пикап",
-    "limousine": "седан",
-    "truck": "грузовик",
-    "motorbike": "мотоцикл",
-    "trailer": "прицеп",
-    "semiAutomatic": "Полуавтоматический",
-    "automatic": "Автоматически",
-    "manual": "Вручную",
-    "petrol": "бензин"
+    "coupe": "Купе",
+    "cabriolet": "Кабриолет",
+    "pickup": "Пикап",
+    "limousine": "Лимузин",
+    "truck": "Грузовик",
+    "motorbike": "Мотоцикл",
+    "trailer": "Трейлер",
+    "semiAutomatic": "Полу-авт",
+    "automatic": "Автомат",
+    "manual": "Мануал",
+    "petrol": "Бензин",
+    "gasLng": "Газ lng",
+    "gasLpg": "Газ Lpg",
+    "gasCng": "Газ Cng",
+    "diesel": "Дизель",
+    "hybrid": "Хэтчбек",
+    "electric": "Электро",
+    "ethanol": "Этанол",
+    "other": "Другое"
+  },
+  "colors": {
+    "black": "Черный",
+    "white": "Белый",
+    "silver": "Серебристый",
+    "gold": "Золотой",
+    "blue": "Синий",
+    "red": "Красный",
+    "purple": "Фиолетовый",
+    "yellow": "Желтый",
+    "pink": "Розовый",
+    "green": "Зеленый",
+    "orange": "Белый0",
+    "gray": "Белый1",
+    "brown": "Белый2"
+  },
+  "label": {
+    "or": "ИЛИ",
+    "yourOffer": "Ваше предложение",
+    "email": "Е-мейл",
+    "listingHasBeenSold": "Продано",
+    "baseDetails": "Основное",
+    "description": "Описание",
+    "registered": "Регистрация",
+    "password": "Пароль",
+    "featured": "Топ",
+    "recommended": "Рекомендуемый",
+    "urgent": "Срочный",
+    "phone": "Телефон",
+    "firstName": "Имя",
+    "username": "Никнейм",
+    "lastName": "Фамилия",
+    "power": "Мощность (kW)",
+    "capacity": "Обьем (L)",
+    "model": "Модель",
+    "month": "Месяц",
+    "fuel": "Топливо",
+    "bodyType": "Кузов",
+    "remember": "Запомнить",
+    "gearbox": "Коробка пер.",
+    "km": "Km",
+    "litersIn100Km": "L/100 Km",
+    "VIN": "Vin код",
+    "k": "K",
+    "EURO": "EURO",
+    "centimeter": "cm",
+    "inch": "Inch",
+    "color": "Цвет",
+    "images": "Фото",
+    "speedTo100": "Разгон (0-100)",
+    "mileage": "Пробег",
+    "labelConsCity": "Потр.(город)",
+    "kw": "kW",
+    "location": "Расположение",
+    "l": "L",
+    "seconds": "Секунд",
+    "price": "Цена",
+    "priceMin": "Цена (мин)",
+    "priceMax": "Цена (макс)",
+    "yearMin": "Год (мин)",
+    "yearMax": "Год (макс)",
+    "year": "Год",
+    "type": "Тип",
+    "safety": "Safety",
+    "alarm": "Alarm",
+    "centralLocking": "Central locking",
+    "disabilityEquipment": "Disability equipment",
+    "immobilizer": "Immobilizer",
+    "parkingAid": "Parking aid",
+    "parkingCamera": "Parking camera",
+    "abs": "ABS",
+    "crashed": "Crashed",
+    "comfort": "Comfort",
+    "interiorColor": "Interior color",
+    "bluetooth": "Bluetooth",
+    "cdPlayer": "CD player",
+    "climateControl": "Climate Control",
+    "cruiseControl": "Cruise Control",
+    "electricAdjSeats": "Electric Adj Seats",
+    "electricWindows": "Electric Windows",
+    "fuelTankCapacity": "Tank capacity (L)",
+    "handsFree": "Hands free",
+    "memorySeats": "Memory Seats",
+    "memoryWheel": "Memory Wheel",
+    "mirrorHeating": "Mirror Heating",
+    "mirrorLink": "Mirror Link",
+    "navSystem": "Nav System",
+    "panoramaRoof": "Panorama Roof",
+    "rainSensor": "Rain Sensor",
+    "seatHeating": "Seat Heating",
+    "selfDriving": "Self Driving",
+    "startStop": "Start-stop",
+    "sunRoof": "Sun Roof",
+    "seatType": "Seat type",
+    "emissionStandard": "Emission standard",
+    "fuelTank": "Fuel tank",
+    "height": "Height",
+    "weight": "Weight",
+    "tireSize": "Tire size",
+    "rightHandDrive": "Right hand-drive",
+    "vin": "VIN",
+    "regNumber": "Reg nr",
+    "warrantyBook": "Warranty book",
+    "consumptionCombined": "Combined (L/100km)",
+    "consumptionHighway": "Highw. (L/100km)",
+    "consumptionUrban": "Urban (L/100km)",
+    "lights": "Lights",
+    "exterior": "Exterior",
+    "technical": "Technical",
+    "towbar": "Towbar",
+    "doors": "Doors",
+    "metallicColor": "Metallic color",
+    "other": "Other",
+    "make": "Make",
+    "january": "January",
+    "february": "February",
+    "march": "March",
+    "april": "April",
+    "may": "May",
+    "june": "June",
+    "july": "July",
+    "august": "August",
+    "september": "September",
+    "october": "October",
+    "november": "November",
+    "december": "December"
+  },
+  "base": {
+    "yes": "Да",
+    "no": "Нет"
+  },
+  "market": {
+    "seller": "Продавец"
+  },
+  "placeholder": {
+    "password": "P@$$w0rd",
+    "email": "john@doe.com",
+    "firstName": "Aleksei",
+    "make": "eg. Audi",
+    "yearMin": "eg. 1960",
+    "username": "eg. GreenCat01",
+    "yearMax": "eg. 2020",
+    "priceMin": "eg. 500",
+    "priceMax": "eg. 1000",
+    "gearbox": "eg. Manual",
+    "bodyType": "eg. Sedan",
+    "model": "eg. A6",
+    "fuel": "eg. Diesel",
+    "lastName": "Dmitrijev"
+  },
+  "button": {
+    "signIn": "Войти",
+    "findMore": "Узнать больше",
+    "signUp": "Зарегистрироваться",
+    "signUpWithGoogle": "Зарегистрироваться в Google",
+    "signUpWithFacebook": "Зарегистрироваться через Facebook",
+    "signInWithGoogle": "Войти через Google",
+    "signInWithFacebook": "Войти через Facebook",
+    "reset": "Сбросить",
+    "continue": "Продолжить",
+    "call": "Позвонить",
+    "send": "Отправить",
+    "mail": "Е-мейл",
+    "back": "Назад",
+    "loadMore": "Еще",
+    "create": "Создать",
+    "message": "Написать",
+    "search": "Поиск",
+    "share": "Поделиться",
+    "pressToUploadImages": "Загрузить фото",
+    "contact": "Контант",
+    "pullDownToRefresh": "Опутсить чтобы обносить",
+    "releaseToRefresh": "Release to refresh",
+    "advancedSearch": "Расш. поиск",
+    "logOut": "Выйти",
+    "showMore": "Еще",
+    "cancel": "Отмена",
+    "close": "Закрыть",
+    "offer": "Предложить",
+    "showLess": "Спрятать",
+    "forgotPassword": "Забыл пароль",
+    "addListing": "Добавить"
+  },
+  "moto": {
+    "buyingAndSelling": "Покупка - Продажа",
+    "cars": "машин",
+    "made": "которая",
+    "easy": "удобна"
   }
 }
