fix russian translation

--- a/i18n/translations/ru.json
+++ b/i18n/translations/ru.json
@@ -21,28 +21,28 @@
   },
   "titles": {
     "vehicle_of_the_day": "Автомобиль дня",
-    "featuredVehicles": "Рекомендуемые автомобили",
+    "featuredVehicles": "Топ",
     "registrationDisclaimer": "🤞 Мы не передаем вашу личную информацию третьим лицам.",
-    "recommendedVehicles": "Рекомендуемые автомобили",
-    "createListing": "Создать список",
+    "recommendedVehicles": "Рекомендации",
+    "createListing": "Создать",
     "favorites": "Избранное",
-    "latestVehicles": "Последние автомобили",
+    "latestVehicles": "Последние",
     "generalDetails": "Общие сведения",
     "foundVehicles": "Найденные автомобили",
-    "searchForChatTopic": " Поиск темы чата",
-    "consumptionDetails": "Рекомендуемые автомобили0",
-    "soldVehicles": "Рекомендуемые автомобили1",
-    "thatsAll": "Рекомендуемые автомобили2",
-    "availableVehicles": "Рекомендуемые автомобили3",
-    "listingDetails": "Рекомендуемые автомобили4",
-    "vehicleDetails": "Рекомендуемые автомобили5",
-    "allVehicles": "Рекомендуемые автомобили6"
+    "searchForChatTopic": "Поиск темы чата",
+    "consumptionDetails": "Потребление",
+    "soldVehicles": "Продано",
+    "thatsAll": "Это все",
+    "availableVehicles": "Доступные",
+    "listingDetails": "Объявление",
+    "vehicleDetails": "Авто",
+    "allVehicles": "Все авто"
   },
   "navigation": {
     "myProfile": "Мой профиль",
-    "myListings": "Мои объявления",
-    "myFavorites": "Мои избранные",
-    "legalAndFaq": "Юридические вопросы и часто задаваемые вопросы"
+    "myListings": "Объявления",
+    "myFavorites": "Избранные",
+    "legalAndFaq": "Инфо"
   },
   "vehicle": {
     "sedan": "Седан",
@@ -65,7 +65,7 @@
     "gasLpg": "Газ Lpg",
     "gasCng": "Газ Cng",
     "diesel": "Дизель",
-    "hybrid": "Хэтчбек",
+    "hybrid": "Гибрид",
     "electric": "Электро",
     "ethanol": "Этанол",
     "other": "Другое"
@@ -82,8 +82,8 @@
     "pink": "Розовый",
     "green": "Зеленый",
     "orange": "Белый0",
-    "gray": "Белый1",
-    "brown": "Белый2"
+    "gray": "Серый",
+    "brown": "Коричневый"
   },
   "label": {
     "or": "ИЛИ",
