--- a/i18n/translations/ru.json
+++ b/i18n/translations/ru.json
@@ -222,7 +222,7 @@
   "button": {
     "signIn": "Войти",
     "findMore": "Узнать больше",
-    "signUp": "Зарегистрироваться",
+    "signUp": "Регистрация",
     "signUpWithGoogle": "Зарегистрироваться в Google",
     "signUpWithFacebook": "Зарегистрироваться через Facebook",
     "signInWithGoogle": "Войти через Google",
