--- a/i18n/translations/en.json
+++ b/i18n/translations/en.json
@@ -11,13 +11,15 @@
     "weakPassword": "🤖 Weak password",
     "invalidMileage": "🔧 Invalid mileage",
     "oops": "🐞 Oops! Something happened",
+    "tooManyRequestsTryAgain": "😔  Notso fast! Try again in a minute",
     "invalidUsername": "😡 Invalid username"
   },
   "snackbar": {
     "welcome": "👋 Welcome",
     "deleteSuccessful": "🗑️ Delete successful!",
     "listingCreated": "🙌 Listing created",
-    "link_copied": "Link copied!"
+    "link_copied": "Link copied!",
+    "offerSent": "Offer sent! 🙌"
   },
   "titles": {
     "vehicle_of_the_day": "Vehicle of the day",
