add russian translations

--- a/i18n/translations/ru.json
+++ b/i18n/translations/ru.json
@@ -9,15 +9,17 @@
     "invalidVehicleCapacity": "🔧 Недопустимая мощность",
     "nothingFound": "🔧 Ничего не найдено",
     "weakPassword": " 🤖 Слабый пароль",
-    "invalidMileage": "🔧 Недействительный пробег",
-    "oops": "🔑 Неверные учетные данные0",
-    "invalidUsername": "🔑 Неверные учетные данные1"
+    "invalidMileage": "🔧 Недопустимый пробег",
+    "oops": "🐞  Ой! Что-то пошло не так!",
+    "tooManyRequestsTryAgain": "😔  Не так быстро! Попробуйте позже",
+    "invalidUsername": "🤖  Неверный формат имени"
   },
   "snackbar": {
     "welcome": "👋 Добро пожаловать",
     "deleteSuccessful": "🗑️ Удаление выполнено!",
     "listingCreated": "🙌 Объявление создано",
-    "link_copied": "Ссылка скопирована!"
+    "link_copied": "Ссылка скопирована!",
+    "offerSent": "Предложение создано! 🙌"
   },
   "titles": {
     "vehicle_of_the_day": "Автомобиль дня",
