--- a/i18n/translations/en.json
+++ b/i18n/translations/en.json
@@ -18,6 +18,7 @@
     "welcome": "👋 Welcome",
     "deleteSuccessful": "🗑️ Delete successful!",
     "listingCreated": "🙌 Listing created",
+    "listingUpdated": "Listing updated! 🙌",
     "link_copied": "Link copied!",
     "offerSent": "Offer sent! 🙌"
   },
@@ -100,6 +101,8 @@
     "recommended": "Recommended",
     "urgent": "Urgent",
     "phone": "Phone",
+    "sold": "Sold",
+    "available": "Available",
     "firstName": "First name",
     "username": "Username",
     "lastName": "Last name",
@@ -225,6 +228,7 @@
     "signIn": "Sign in",
     "findMore": "Find more",
     "signUp": "Sign up",
+    "edit": "Edit",
     "signUpWithGoogle": "Sign up with Google",
     "signUpWithFacebook": "Sign up with Facebook",
     "signInWithGoogle": "Sign in with Google",
